--- a/TaskStatistaDemo/.classpath
+++ b/TaskStatistaDemo/.classpath
@@ -46,12 +46,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/bhumi/Downloads/json-simple-1.1.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/bhumi/OneDrive/Desktop/bibliothek/gson-2.8.2.jar">
+	<classpathentry kind="lib" path="C:/Users/bhumi/OneDrive/Desktop/bibliothek/javafx-sdk-18.0.1/lib/gson-2.8.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
